--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v4
 
     # Generates the snake  
-      - uses: Platane/snk@v3
+      - uses: Platane/snk@main
         id: snake-gif
         with:
           github_user_name: Zainab-Saad
